Harden path traversal detection and resource location boundary checks